fix: white space for tutorials sections

--- a/src/pages/tutorials/tutorials.scss
+++ b/src/pages/tutorials/tutorials.scss
@@ -400,7 +400,6 @@
     padding: 1.6rem;
     overflow-x: hidden;
     overflow-y: scroll;
-    padding-bottom: 100px;
 
     @include tablet-screen {
         width: 100%;
@@ -475,7 +474,7 @@
     &__qs-guide,
     &__search {
         @include mobile-or-tablet-screen {
-            height: calc(100vh - 350px);
+            height: calc(100vh - 28rem);
             overflow: auto;
 
             .tutorials-wrap {
